# eudi-wallet

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  db_playground.py  ebsi_holder_wallet_conformance_v3.ipynb  ebsi_legal_entity.ipynb  ebsi_natural_person.ipynb  ebsi_natural_person_conformance_v3.ipynb  main.py  manifest.in  notebook.ipynb  pyproject.toml  requirements.txt
.github/workflows/: staging.yaml
alembic/: env.py
alembic/versions/: 052e160bdd61_.py  3be60cbb77ee_.py  4b55f8ee9ea5_.py  792325ac96d1_.py  9d0d8756d0e3_.py  9da0012a44c6_.py  a3819b3c9d50_.py  df9b61c75170_.py  f2622afe5eae_.py
did_jwt/: __init__.py  signer_algorithm.py
ebsi_client/: __init__.py
ebsi_did/: __init__.py
ebsi_wallet/: main.py
ebsi_wallet/did_key/: __init__.py
ebsi_wallet/siop_auth/: util.py
ebsi_wallet/util/: __init__.py
ethereum/: __init__.py
eudi_wallet/did_key/: __init__.py
eudi_wallet/ebsi/auth/: authorization.py
eudi_wallet/ebsi/did_registry/: __init__.py  did_registry.py
eudi_wallet/ebsi/discovery/: __init__.py  discovery.py
eudi_wallet/ebsi/events/: event_types.py  wrapper.py
eudi_wallet/ebsi/issuer/: server.py
eudi_wallet/ebsi/ledger/: __init__.py  ledger.py
eudi_wallet/ebsi/models/: base.py  credential_offer.py  credential_revocation_status_list.py  credential_schema.py  data_agreement.py  organisation.py
eudi_wallet/ebsi/repositories/: credential_offer.py  credential_revocation_status_list.py  credential_schema.py  data_agreement.py  organisation.py
eudi_wallet/ebsi/utils/: __init__.py  common.py  date_time.py  hex.py  http_client.py  httpx_client.py  jsonschema.py  jwt.py  url_parser.py  webhook.py
eudi_wallet/ebsi_did/: __init__.py
eudi_wallet/ethereum/: __init__.py
eudi_wallet/holder/: core.py
eudi_wallet/siop_auth/: util.py
eudi_wallet/util/: __init__.py
notebooks/sd-jwt/: sd_jwt.ipynb
notebooks/v1/: ebsi_legal_entity.ipynb
notebooks/v2/: ebsi_natural_person.ipynb
notebooks/v3/accredit-authorize/: accredit_authorize.ipynb
resources/docker/: Dockerfile
resources/docker/server/: Dockerfile
siop_auth/: __init__.py  util.py
src/: main.py
src/did_jwt/: __init__.py  signer_algorithm.py
src/ebsi_client/: __init__.py
src/ebsi_did/: __init__.py
src/ebsi_did_resolver/: __init__.py
src/siop_auth/: __init__.py  util.py
src/util/: __init__.py  verifiable_presentation.py
src/validators/: __init__.py
util/: __init__.py
(+128 files in other folders)
