[tool.poetry]
name = "eudi-wallet"
version = "0.0.1"
description = "EUDI Wallet SDK"
authors = ["George J Padayatti <george.padayatti@igrant.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10.1,<3.11"
jwcrypto = "^1.3.1"
py-multibase = "^1.0.3"
coincurve = "^17.0.0"
aiohttp = "^3.8.1"
sslcrypto = "^5.3"
rich = "^12.5.1"
jsonschema = "^4.14.0"
base58 = "1.0.3"
eth-keys = "^0.4.0"
PyJWT = "^2.4.0"
pysha3 = "^1.0.2"
multiformats = "^0.2.1"
cryptography = "^41.0.1"
pyngrok = "^6.0.0"
click = "^8.1.3"
dataclasses-json = "^0.5.9"
sqlalchemy = "^2.0.19"
pytz = "^2024.1"
pydantic = "^2.1.1"
aiokafka = "^0.8.1"
tenacity = "^8.2.2"
httpx = "^0.24.1"
mnemonic = "^0.20"
psycopg2-binary = "^2.9.7"
jsonpath-ng = "^1.5.3"
setuptools = "^68.2.0"
web3 = "^6.9.0"
pip = "^23.2.1"
sdjwt = {git = "https://github.com/decentralised-dataexchange/sd-jwt-playground.git", rev = "2024.4.1"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
notebook = "^6.4.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
debugpy = "^1.6.7"

[tool.poetry.scripts]
start-server = 'eudi_wallet.ebsi.entry_points.server.start:main'
start-consumer = 'eudi_wallet.ebsi.entry_points.kafka.consumer:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright.report]
"reportCallExpressionNotUsedInTypeExpression" = false
